--- a/app/views/squeaks/index.html.erb
+++ b/app/views/squeaks/index.html.erb
@@ -1,3 +1,10 @@
+<%= form_for Squeak.new do |form| %>
+  <%= form.label :message %>
+  <%= form.text_field :message %>
+
+  <%= form.submit 'Squeak!' %>
+<% end %>
+
 <ul>
   <% Squeak.all.each do |squeak| %>
     <li><%= squeak.user.name %>: <%= squeak.message %></li>
